adds inch api and implements successful swap
